# HIVE

./: .gitmodules  LICENSE  README.md  detector.py  recognizer.py  router.js  router.ts  setup.sh
AgentControl/: AgentControl.ino  Mecanum.cpp  Mecanum.h  MinIMU9.cpp  MinIMU9.h  Motor.cpp  Motor.h
Arduino Control of Agent/AgentControl/: AgentControl.ino  Mecanum.cpp  Motor.cpp  Motor.h
ESP32 Websocket Client/: ESP32_Websocket_Client.ino
agent_control/: CMakeLists.txt  package.xml
agent_control/config/: agent_control.yaml
agent_control/launch/: agent_control.launch
agent_nav/: CMakeLists.txt  package.xml
agent_nav/launch/: nav.launch  nav2.launch
fleet_bringup/: CMakeLists.txt  package.xml
fleet_bringup/launch/: bringup.launch
hive-m-explore/hive_explore/: CMakeLists.txt  package.xml
hive-m-explore/hive_explore/include/explore/: explore.h
hive-m-explore/hive_explore/launch/: explore.launch
hive-m-explore/hive_explore/src/: costmap_client.cpp  explore.cpp
hive-m-explore/hive_explore/srv/: Map.srv
hive_msg/: CMakeLists.txt  package.xml
hive_msg/msg/: HIVE_AUTO.msg  HIVE_RC.msg
hive_sim/: CMakeLists.txt  package.xml
hive_states/: CMakeLists.txt  frames.gv  package.xml
hive_states/launch/: explore.launch  states.launch
hive_states/msg/: Decider.msg
laser_updater/: CMakeLists.txt  package.xml
payload_detect/: CMakeLists.txt  package.xml
router/: package-lock.json  package.json  router.ts  scanner.ts  server.ts  tsconfig.json
swarm_sim/: CMakeLists.txt  frames.gv  package.xml
web_interface/: CMakeLists.txt  package.xml
(+62 files in other folders)
