<?xml version="1.0"?>
<package format="2">
  <name>hive_explore</name>
  <version>2.1.4</version>

  <description>A simple modification of the explore_lite package</description>

  <author email="msimmonds002@gmail.com">Marcus Simmonds</author>
  <maintainer email="msimmonds002@gmail.com">Marcus Simmonds</maintainer>
  <license>BSD</license>
  
  <!-- Wiki for original explore_lite-->
  <url>http://wiki.ros.org/explore_lite</url>

  <!-- acknowledgements
  <author>Charles DuHadway</author>
  <url>http://ros.org/wiki/explore</url>
  <author>Paul Bovbel</author>
  <url>https://github.com/paulbovbel/frontier_exploration</url>
  -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <test_depend>roslaunch</test_depend>
</package>
